--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
     <meta charset="UTF-8">
     <script defer src="lesson_7_8.js"></script>
   </head>
-  <body></body>
+  <body>
+    <h2>Chess</h2>
+  </body>
 </html>
